--- a/python_examples/wakeword.ipynb
+++ b/python_examples/wakeword.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,12 +23,14 @@
     "import random\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import python_speech_features"
+    "import python_speech_features\n",
+    "import random\n",
+    "import math \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,15 +132,20 @@
     "for index, target in enumerate(target_list):\n",
     "    # print(join(dataset_path, target))\n",
     "    filesn = listdir(join(dataset_path, target))\n",
-    "    filenames.append(filesn)\n",
+    "    limit = 1\n",
+    "    if target != 'bird':\n",
+    "        limit = 0.02\n",
+    "    filenames.append(filesn[:int(len(filesn)*limit)])\n",
     "    files = [{\n",
-    "        \"id\": x,\n",
+    "        \"id\": '{}_{}'.format(target, x),\n",
     "        \"is_hotword\": 1 if target == 'bird' else 0, \n",
     "        \"worker_id\": 12, \n",
     "        \"duration\": 1.86, \n",
     "        \"audio_file_path\": join(dataset_path, target, x), \n",
-    "    } for x in filesn]\n",
+    "    } for x in filesn[:int(len(filesn)*limit)]]\n",
+    "\n",
     "    absolute_path.extend(files)\n",
+    "    random.shuffle(absolute_path)\n",
     "    y.append(np.ones(len(filenames[index])) * index)\n",
     "\n",
     "# print(absolute_path)"
@@ -146,13 +153,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "absolute_path len1 4123\n",
+      "absolute_path len2 4123\n"
+     ]
+    }
+   ],
    "source": [
     "# Calculate validation and test set sizes\n",
-    "absolute_path = absolute_path[:int(len(absolute_path) * 0.1)]\n",
-    "\n",
+    "print('absolute_path len1', len(absolute_path))\n",
+    "absolute_path = absolute_path[:int(len(absolute_path) * 1)]\n",
+    "print('absolute_path len2', len(absolute_path))\n",
     "val_set_size = int(len(absolute_path) * val_ratio)\n",
     "test_set_size = int(len(absolute_path) * test_ratio)\n",
     "# Break dataset apart into train, validation, and test sets\n",
@@ -163,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
